bug: page jumps when scrollbar is there

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,15 @@ body {
   font-family: sans-serif;
   background-color: white; /*#f5f5f547;*/
 }
+
+body, html {
+    overflow-x: hidden;
+}
+
+html {
+    overflow-y: scroll;
+}
+
 @media print {
   body {
     background-color: #fff;
